--- a/src/scripts/data/assets/sc4evermore/21-other.yaml
+++ b/src/scripts/data/assets/sc4evermore/21-other.yaml
@@ -36,7 +36,7 @@ assets:
       BSC\Ripplejet\Census Repository\RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           bulldoze: 100
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 45
           garbage: 23
@@ -69,7 +69,7 @@ assets:
       BSC\Ripplejet\Census Repository\RW_2x2_Census Repository Vault.SC4Lot:
         645e467b:
           bulldoze: 1500
-          category: rewards
+          categories: rewards
           cost: 2000
           flamability: 38
           garbage: 5
@@ -91,7 +91,7 @@ assets:
       BSC\Ripplejet\Census Repository\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
         6471f58b:
           bulldoze: 9000
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 38
           garbage: 47
@@ -126,7 +126,7 @@ assets:
       _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_HIGH.SC4Lot:
         6471f58b:
           bulldoze: 9000
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 38
           garbage: 47
@@ -161,7 +161,7 @@ assets:
       _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_LOW.SC4Lot:
         6471f58b:
           bulldoze: 9000
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 38
           garbage: 47
@@ -196,7 +196,7 @@ assets:
       _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_MEDIUM.SC4Lot:
         6471f58b:
           bulldoze: 9000
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 38
           garbage: 47
@@ -231,7 +231,7 @@ assets:
       _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_ZP_ULTRA.SC4Lot:
         6471f58b:
           bulldoze: 9000
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 38
           garbage: 47
@@ -266,7 +266,7 @@ assets:
       _Documents\BSC_Readmes\RippleJet\_Census Repository___CHOOSE ONE --- SEE README!!!\RW_3x1_Census Repository Facility_Z_CLASSIC.SC4Lot:
         6471f58b:
           bulldoze: 9000
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 38
           garbage: 47
@@ -306,7 +306,7 @@ assets:
         buildings:
           0dd41d65:
             bulldoze: 100
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 45
             garbage: 23
@@ -376,7 +376,7 @@ assets:
         buildings:
           645e467b:
             bulldoze: 1500
-            category: rewards
+            categories: rewards
             cost: 2000
             flamability: 38
             garbage: 5
@@ -410,7 +410,7 @@ assets:
         buildings:
           6471f58b:
             bulldoze: 9000
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 38
             garbage: 47
@@ -458,7 +458,7 @@ assets:
         buildings:
           6471f58b:
             bulldoze: 9000
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 38
             garbage: 47
@@ -506,7 +506,7 @@ assets:
         buildings:
           6471f58b:
             bulldoze: 9000
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 38
             garbage: 47
@@ -554,7 +554,7 @@ assets:
         buildings:
           6471f58b:
             bulldoze: 9000
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 38
             garbage: 47
@@ -602,7 +602,7 @@ assets:
         buildings:
           6471f58b:
             bulldoze: 9000
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 38
             garbage: 47
@@ -650,7 +650,7 @@ assets:
         buildings:
           6471f58b:
             bulldoze: 9000
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 38
             garbage: 47
