--- a/src/scripts/data/assets/simtropolis/101-residential.yaml
+++ b/src/scripts/data/assets/simtropolis/101-residential.yaml
@@ -22754,7 +22754,7 @@ assets:
               bulldoze: 703
               capacity:
                 r$: 3161
-              category: r$
+              categories: r$
               flamability: 45
               garbage: 190
               model: 5ad0e817-b21fc9d1-00070000
@@ -22769,7 +22769,7 @@ assets:
           Coco_SamsungApt_MN/Coco_SamsungAPT-0x6534284a-0xb21fc9d1-0xd4184728.SC4Desc:
             d4184728:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -22791,7 +22791,7 @@ assets:
           Coco_SamsungApt_MN/Coco_SamsungApt_LM 7x3_d41847ed.SC4Lot:
             d41847ed:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -22874,7 +22874,7 @@ assets:
               bulldoze: 703
               capacity:
                 r$: 3161
-              category: r$
+              categories: r$
               flamability: 45
               garbage: 190
               model: 5ad0e817-b21fc9d1-00090000
@@ -22889,7 +22889,7 @@ assets:
           Coco_SamsungApt_DN/Coco_SamsungAPT_DN-0x6534284a-0xb21fc9d1-0xf4185278.SC4Desc:
             f4185278:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -22911,7 +22911,7 @@ assets:
           Coco_SamsungApt_DN/Coco_SamsungApt_DN_LM 7x3_d4185370.SC4Lot:
             d4185370:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23078,7 +23078,7 @@ assets:
           Coco_Hillstate_APT-0x6534284a-0x94136420-0xb426a240.SC4Desc:
             b426a240:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23103,7 +23103,7 @@ assets:
               capacity:
                 r$: 3076
                 r$$: 1699
-              category: r$$
+              categories: r$$
               flamability: 40
               garbage: 239
               model: 5ad0e817-94136420-00040000
@@ -23118,7 +23118,7 @@ assets:
           Coco_Hillstate_APT_LM_MN_4x2_3426a2a4.SC4Lot:
             3426a2a4:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23187,7 +23187,7 @@ assets:
           Coco_Hillstate_APT-0x6534284a-0x94136420-0x7426a43d.SC4Desc:
             7426a43d:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23212,7 +23212,7 @@ assets:
               capacity:
                 r$: 3076
                 r$$: 1699
-              category: r$$
+              categories: r$$
               flamability: 40
               garbage: 239
               model: 5ad0e817-94136420-00040000
@@ -23227,7 +23227,7 @@ assets:
           Coco_Hillstate_APT_LM_DN_4x2_9426d3df.SC4Lot:
             9426d3df:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23340,7 +23340,7 @@ assets:
           Coco_ePyeonhanAPT-0x6534284a-0x3442801b-0x7443f7d1.SC4Desc:
             7443f7d1:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23365,7 +23365,7 @@ assets:
               capacity:
                 r$: 6186
                 r$$: 3416
-              category: r$$
+              categories: r$$
               flamability: 40
               garbage: 480
               model: 5ad0e817-3442801b-00120000
@@ -23380,7 +23380,7 @@ assets:
           Coco_ePyeonhanAPT_LM4x3_1443f7f3.SC4Lot:
             1443f7f3:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23477,7 +23477,7 @@ assets:
           Coco_ePyeonhanAPT-0x6534284a-0x3442801b-0x5443fd4d.SC4Desc:
             5443fd4d:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
@@ -23502,7 +23502,7 @@ assets:
               capacity:
                 r$: 6186
                 r$$: 3416
-              category: r$$
+              categories: r$$
               flamability: 40
               garbage: 480
               model: 5ad0e817-3442801b-00120000
@@ -23517,7 +23517,7 @@ assets:
           Coco_ePyeonhanAPT_LM4x3_DN_1443fd77.SC4Lot:
             1443fd77:
               bulldoze: 100
-              category: landmarks
+              categories: landmarks
               cost: 110000
               description: Insert ploppable description here.
               flamability: 10
