--- a/src/scripts/data/assets/simtropolis/36-spam-simpeg-agricultural-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/36-spam-simpeg-agricultural-mods.yaml
@@ -120,7 +120,7 @@ assets:
           bulldoze: 5
           capacity:
             ir: 1
-          category: agriculture
+          categories: agriculture
           model: 5ad0e817-badb57f1-0e110000
           name: SPAM_FarmField_Tilled
           water: 1
