--- a/src/scripts/data/assets/github/uncategorized.yaml
+++ b/src/scripts/data/assets/github/uncategorized.yaml
@@ -410,7 +410,7 @@ assets:
       Census Repository v3.5 Patch\RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           bulldoze: 100
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 45
           garbage: 23
@@ -449,7 +449,7 @@ assets:
         buildings:
           0dd41d65:
             bulldoze: 100
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 45
             garbage: 23
