--- a/src/scripts/data/assets/simtropolis/122-dll-mods.yaml
+++ b/src/scripts/data/assets/simtropolis/122-dll-mods.yaml
@@ -285,7 +285,7 @@ assets:
       Census Repository v3.5 Patch\RJ - Census_Repository_Model_and_Query_3.1.dat:
         0dd41d65:
           bulldoze: 100
-          category: rewards
+          categories: rewards
           cost: 15000
           flamability: 45
           garbage: 23
@@ -325,7 +325,7 @@ assets:
         buildings:
           0dd41d65:
             bulldoze: 100
-            category: rewards
+            categories: rewards
             cost: 15000
             flamability: 45
             garbage: 23
